# cmavnode

./: CMakeLists.txt
lib/: example.py
src/: wrapper.cpp  wrapper.h
